--- a/MarkLLM_demo.ipynb
+++ b/MarkLLM_demo.ipynb
@@ -27,11 +27,11 @@
     "download_models = False\n",
     "\n",
     "opt_path = \"/workspace/panleyi/models/facebook/opt-1.3b\"\n",
-    "llama_path = \"models/llama-7b\"\n",
-    "nllb_path = \"models/nllb-200-distilled-600M\"\n",
-    "bert_large_uncased_path = \"models/compositional-bert-large-uncased/\"\n",
-    "t5_path = \"models/t5-v1_1-xxl\"\n",
-    "starcoder_path = \"models/starcoder\"\n",
+    "llama_path = \"/root/model/llama-7b\"\n",
+    "nllb_path = \"/root/model/nllb-200-distilled-600M\"\n",
+    "bert_large_uncased_path = \"/root/model/compositional-bert-large-uncased/\"\n",
+    "t5_path = \"/root/model/t5-v1_1-xxl\"\n",
+    "starcoder_path = \"/root/model/starcoder\"\n",
     "\n",
     "if download_models:\n",
     "    !pip install -U huggingface_hub\n",
@@ -47,6 +47,126 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 开始执行模型下载任务...\n",
+      "\n",
+      "[步骤 2/3] 开始克隆模型仓库...\n",
+      "\n",
+      "--- 正在处理模型: starcoder ---\n",
+      "执行命令: git clone --depth 1 https://gitee.com/hf-models/starcoder /root/model/starcoder\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into '/root/model/starcoder'...\n",
+      "warning: Clone succeeded, but checkout failed.\n",
+      "You can inspect what was checked out with 'git status'\n",
+      "and retry with 'git restore --source=HEAD :/'\n",
+      "\n",
+      "\n",
+      "Exiting because of \"interrupt\" signal.\n",
+      "Cloning into '/root/model/sentence-transformers'...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ 模型 'starcoder' 下载失败，返回码: 2\n",
+      "\n",
+      "--- 正在处理模型: all-mpnet-base-v2 ---\n",
+      "执行命令: git clone --depth 1 https://gitee.com/hf-models/all-mpnet-base-v2 /root/model/sentence-transformers\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "# --- 配置区 ---\n",
+    "\n",
+    "# 设置为 True 来执行下载，设置为 False 则跳过所有下载\n",
+    "download_models = True\n",
+    "\n",
+    "# 定义模型下载的目标路径\n",
+    "opt_path = \"/root/model/opt-1.3b\"\n",
+    "llama_path = \"/root/model/llama-7b\"\n",
+    "nllb_path = \"/root/model/nllb-200-distilled-600M\"\n",
+    "bert_large_uncased_path = \"/root/model/compositional-bert-large-uncased\"\n",
+    "t5_path = \"/root/model/t5-v1_1-xxl\"\n",
+    "starcoder_path = \"/root/model/starcoder\"\n",
+    "\n",
+    "gpt2_path = \"/home/aistudio/models/gpt2-large\"\n",
+    "SE_path = \"/root/model/sentence-transformers\"\n",
+    "# https://gitee.com/hf-models/openai-community-gpt2-large\n",
+    "\n",
+    "# 将所有模型信息整合到一个列表中，方便循环处理\n",
+    "models_to_download = [\n",
+    "    # (\"https://gitee.com/hf-models/opt-1.3b\", opt_path),\n",
+    "    # (\"https://gitee.com/hf-models/llama-7b\", llama_path),\n",
+    "    # (\"https://gitee.com/hf-models/nllb-200-distilled-600M\", nllb_path),\n",
+    "    # (\"https://gitee.com/hf-models/compositional-bert-large-uncased\", bert_large_uncased_path),\n",
+    "    # (\"https://gitee.com/hf-models/t5-v1_1-xxl\", t5_path),\n",
+    "    # (\"https://gitee.com/hf-models/starcoder\", starcoder_path),\n",
+    "\n",
+    "    (\"https://gitee.com/hf-models/openai-community-gpt2-large\", gpt2_path),\n",
+    "    (\"https://gitee.com/hf-models/all-mpnet-base-v2\", SE_path),\n",
+    "]\n",
+    "\n",
+    "# --- 执行区 ---\n",
+    "\n",
+    "if download_models:\n",
+    "    print(\"🚀 开始执行模型下载任务...\")\n",
+    "\n",
+    "    # 步骤 1: 循环下载所有指定的模型\n",
+    "    print(\"\\n[步骤 2/3] 开始克隆模型仓库...\")\n",
+    "    for repo_url, local_path in models_to_download:\n",
+    "        model_name = repo_url.split(\"/\")[-1]\n",
+    "        print(f\"\\n--- 正在处理模型: {model_name} ---\")\n",
+    "        \n",
+    "        # 检查目标路径是否已存在\n",
+    "        if os.path.exists(local_path):\n",
+    "            print(f\"✔️ 目录 '{local_path}' 已存在，跳过下载。\")\n",
+    "            continue\n",
+    "        \n",
+    "        # 创建父目录 (如果不存在)\n",
+    "        parent_dir = os.path.dirname(local_path)\n",
+    "        if parent_dir and not os.path.exists(parent_dir):\n",
+    "            print(f\"创建父目录: {parent_dir}\")\n",
+    "            os.makedirs(parent_dir, exist_ok=True)\n",
+    "            \n",
+    "        # 构建并执行 git clone 命令\n",
+    "        # 使用 --depth 1 进行浅克隆，大大加快下载速度\n",
+    "        command = f\"git clone --depth 1 {repo_url} {local_path}\"\n",
+    "        print(f\"执行命令: {command}\")\n",
+    "        \n",
+    "        try:\n",
+    "            # 使用 os.system 实时显示下载进度\n",
+    "            result_code = os.system(command)\n",
+    "            if result_code == 0:\n",
+    "                print(f\"✅ 模型 '{model_name}' 成功下载到 '{local_path}'\")\n",
+    "            else:\n",
+    "                print(f\"❌ 模型 '{model_name}' 下载失败，返回码: {result_code}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ 执行命令时发生异常: {e}\")\n",
+    "            \n",
+    "    # 步骤 2: 完成\n",
+    "    print(\"\\n[步骤 3/3] 所有下载任务已处理完毕。\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"ℹ️ 'download_models' 设置为 False，已跳过所有下载任务。\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "sAzv2lgqG9WL"
@@ -57,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "bFsJT3LdfynV"
    },
@@ -126,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -134,7 +254,49 @@
     "id": "T9lVoHjWLaNq",
     "outputId": "cb2c64d0-96f5-4411-edaa-73c6fb46f89d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM-generated watermarked text:\n",
+      "Cluster comprises IBM's Opteron-based eServer 325 server and systems management software and storage devices that can run Linux and Windows operating systems.\n",
+      "\n",
+      "IBM’s Opteron server series provides a wide range of performance and scalability advantages over industry industry standard hardware, with the choice of a unified high-speed DDR3 or standard 2.5\" SATA drives, as well as one, two or four virtual ports per machine. The company said the server can have up to 75 virtual-to-physical or virtual-to -virtual host conversion capabilities from an existing Oracle database instance, and support up to 15 virtual, physical or mixed physical and virtual instances of Linux.\n",
+      "\n",
+      "The firm said the system was designed for large enterprises to support both workloads and large transactions, and it supports more than 60 million lines of data. It handles 5 to 15,000 transactions per second on most workload types, and supports cloud workloads, it said. IBM has described the Opteron platform as a platform that is built for business mobility, extending from the data center to mobile data center or desk-top to mobile devices\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': True, 'score': 8.21210061380327}\n",
+      "\n",
+      "\n",
+      "LLM-generated unwatermarked text:\n",
+      "Cluster comprises IBM's Opteron-based eServer 325 server and systems management software and storage devices that can run Linux and Windows operating systems.\n",
+      "\n",
+      "\"Our goal is to have them be in a data center on the same server, running on the same system at the same time,\" said Brian Chisum, CEO and co-founder of Opteron Systems Corporation, \"The eServer 325 is a server and management platform that can operate on premises and in the cloud. The Opteron environment enables the deployment of multiple heterogenous applications in a single platform that is easily managed, scaled, monitored and managed without requiring extensive change management.\"\n",
+      "\n",
+      "eServer 325 is available for free through a network with a total of 150 to 200 processors. If there is an upgrade path to a higher processor or to a higher processing option, customers receive a free upgrade from the first processor that is purchased. To address the growth of IT infrastructure, customers have purchased additional processors over the years.\n",
+      "\n",
+      "It can run standard servers, file servers and mainframe or distributed application servers.\n",
+      "\n",
+      "eServers allow end users to configure their systems\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': False, 'score': 0.26490647141300877}\n",
+      "\n",
+      "\n",
+      "Natural text:\n",
+      ".\n",
+      "IBM on Tuesday announced a prepackaged and pretested cluster that is powered by Advanced Micro Devices Inc.s 64-bit Opteron processor.\n",
+      "IBM, of Armonk, N.Y., is combining its Opteron-based eServer 325 server—which targets scientific and technical computing users—with systems management software and storage devices to offer a bundled package that can run Linux and Windows operating systems.\n",
+      "The new offering, which will be available later this month or in early December, is part of IBMs eServer Cluster 1350, which also includes bundles based on the companys BladeCenter blade servers and two-processor x335 and x345 systems using Intel Corp.s 32-bit Xeon chips.\n",
+      "Clusters comprise multiple servers tied together to create a supercomputing environment for users. In a related move, IBM last week announced that it was teaming with Corning Inc., the U.S. Department of Energy and the National Nuclear Security\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': False, 'score': 2.1975317355258412}\n"
+     ]
+    }
+   ],
    "source": [
     "test_algorithm('KGW')"
    ]
@@ -948,7 +1110,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "SHIYI",
    "language": "python",
    "name": "python3"
   },
@@ -962,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
