--- a/MarkLLM_demo.ipynb
+++ b/MarkLLM_demo.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -59,21 +59,17 @@
       "\n",
       "[步骤 2/3] 开始克隆模型仓库...\n",
       "\n",
-      "--- 正在处理模型: starcoder ---\n",
-      "执行命令: git clone --depth 1 https://gitee.com/hf-models/starcoder /root/model/starcoder\n"
+      "--- 正在处理模型: openai-community-gpt2-large ---\n",
+      "创建父目录: /home/aistudio/models\n",
+      "执行命令: git clone --depth 1 https://gitee.com/hf-models/openai-community-gpt2-large /home/aistudio/models/gpt2-large\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into '/root/model/starcoder'...\n",
-      "warning: Clone succeeded, but checkout failed.\n",
-      "You can inspect what was checked out with 'git status'\n",
-      "and retry with 'git restore --source=HEAD :/'\n",
-      "\n",
-      "\n",
-      "Exiting because of \"interrupt\" signal.\n",
+      "Cloning into '/home/aistudio/models/gpt2-large'...\n",
+      "Filtering content: 100% (13/13), 24.46 GiB | 37.50 MiB/s, done.\n",
       "Cloning into '/root/model/sentence-transformers'...\n"
      ]
     },
@@ -81,10 +77,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ 模型 'starcoder' 下载失败，返回码: 2\n",
+      "✅ 模型 'openai-community-gpt2-large' 成功下载到 '/home/aistudio/models/gpt2-large'\n",
       "\n",
       "--- 正在处理模型: all-mpnet-base-v2 ---\n",
       "执行命令: git clone --depth 1 https://gitee.com/hf-models/all-mpnet-base-v2 /root/model/sentence-transformers\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filtering content: 100% (2/2)\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 模型 'all-mpnet-base-v2' 成功下载到 '/root/model/sentence-transformers'\n",
+      "\n",
+      "[步骤 3/3] 所有下载任务已处理完毕。\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Filtering content: 100% (2/2), 835.40 MiB | 7.72 MiB/s, done.\n"
      ]
     }
    ],
@@ -105,7 +124,7 @@
     "t5_path = \"/root/model/t5-v1_1-xxl\"\n",
     "starcoder_path = \"/root/model/starcoder\"\n",
     "\n",
-    "gpt2_path = \"/home/aistudio/models/gpt2-large\"\n",
+    "gpt2_path = \"/root/model/gpt2-large\"\n",
     "SE_path = \"/root/model/sentence-transformers\"\n",
     "# https://gitee.com/hf-models/openai-community-gpt2-large\n",
     "\n",
@@ -167,6 +186,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv /home/aistudio/models/gpt2-large /root/model/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "sAzv2lgqG9WL"
@@ -177,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "id": "bFsJT3LdfynV"
    },
@@ -199,7 +227,7 @@
     "\n",
     "def test_algorithm(algorithm_name):\n",
     "    # Check algorithm name\n",
-    "    assert algorithm_name in ['KGW', 'Unigram', 'SWEET', 'EWD', 'SIR', 'XSIR', 'UPV', 'EXP', 'EXPEdit', 'SynthID', 'Adaptive']\n",
+    "    assert algorithm_name in ['KGW', 'Unigram', 'SWEET', 'EWD', 'SIR', 'XSIR', 'UPV', 'EXP', 'EXPEdit', 'SynthID', 'Adaptive', 'Ambiguity']\n",
     "\n",
     "    # Device\n",
     "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
@@ -417,11 +445,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM-generated watermarked text:\n",
+      ". The system also has a 64-bit Intel Xeon CPU with 8 GB memory, a 256 GB SSD storage drive, a 32-bit Intel Atom CPU, a 10 GB SATA hard drive, a 32-bit Intel Atom CPU, a 2 GB Intel Celeron CPU and a 2 GB Intel Celeron CPU.\n",
+      "It's a big step forward for the company, as it will be the first system to run IBM's Open Compute Project. This open-source project aims at providing a common platform on which developers can develop cloud computing services.\n",
+      "The system will be available in the first half of 2013.\n",
+      "IBM has also launched a beta version of its Power Systems software, aimed at helping customers deploy their workloads on the Power System family of products.\n",
+      "The beta version of IBM i Server Manager 6 will be available in the second quarter of 2013.\n",
+      "Copyright 2017 ZDNet.com, Inc. All rights reserved. This material may not be published, broadcast, rewritten or redistributed without prior authorization.\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': True, 'score': 1.0}\n",
+      "\n",
+      "\n",
+      "LLM-generated unwatermarked text:\n",
+      "Cluster comprises IBM's Opteron-based eServer 325 server and systems management software and storage devices that can run Linux and Windows operating systems...\n",
+      "\n",
+      "IBM has entered a non-exclusive arrangement to license rights to the technology behind the Clustered Memory Architecture (CMA) for use by its server, storage and network...\n",
+      "\n",
+      "In July 2011, IBM said it would license a technology called the Clustering Memory Architecture (Clustered Memory) for use in networked clusters of servers, storage systems...\n",
+      "Lance Williams, an IBM marketing and market intelligence vice president, explained the Cluster technology during its Q3 earnings call. It uses cluster architectures that are \"essentially designed to deliver huge amount of compute capacity on a small number of server blades.\"\n",
+      "\n",
+      "In the past, it's been a staple of the industry to talk up its importance in today's cloud. Here are five times in the past where IBM touted Clustered Technology in detail as a driver in its cloud expansion.\n",
+      "\n",
+      "In April 2010, IBM introduced the \"Cluster Computing Initiative\" (CCI). CMA was one\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': False, 'score': 0.569767415523529}\n",
+      "\n",
+      "\n",
+      "Natural text:\n",
+      ".\n",
+      "IBM on Tuesday announced a prepackaged and pretested cluster that is powered by Advanced Micro Devices Inc.s 64-bit Opteron processor.\n",
+      "IBM, of Armonk, N.Y., is combining its Opteron-based eServer 325 server—which targets scientific and technical computing users—with systems management software and storage devices to offer a bundled package that can run Linux and Windows operating systems.\n",
+      "The new offering, which will be available later this month or in early December, is part of IBMs eServer Cluster 1350, which also includes bundles based on the companys BladeCenter blade servers and two-processor x335 and x345 systems using Intel Corp.s 32-bit Xeon chips.\n",
+      "Clusters comprise multiple servers tied together to create a supercomputing environment for users. In a related move, IBM last week announced that it was teaming with Corning Inc., the U.S. Department of Energy and the National Nuclear Security\n",
+      "\n",
+      "\n",
+      "{'is_watermarked': False, 'score': 0.5290322303771973}\n"
+     ]
+    }
+   ],
    "source": [
     "test_algorithm('Adaptive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "检查 Adaptive 相关文件:\n",
+      "配置文件存在: True\n",
+      "模块文件存在: False\n",
+      "'Adaptive' 在映射中: True\n",
+      "映射值: watermark.adaptive.Adaptive\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(\"检查 Adaptive 相关文件:\")\n",
+    "print(f\"配置文件存在: {os.path.exists('config/Adaptive.json')}\")\n",
+    "print(f\"模块文件存在: {os.path.exists('watermark/Adaptive.py')}\")\n",
+    "\n",
+    "# 检查 WATERMARK_MAPPING_NAMES\n",
+    "from watermark.auto_watermark import WATERMARK_MAPPING_NAMES\n",
+    "print(f\"'Adaptive' 在映射中: {'Adaptive' in WATERMARK_MAPPING_NAMES}\")\n",
+    "print(f\"映射值: {WATERMARK_MAPPING_NAMES.get('Adaptive', '未找到')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "检查 Ambiguity 相关文件:\n",
+      "配置文件存在: True\n",
+      "模块文件存在: False\n",
+      "'Ambiguity' 在映射中: False\n",
+      "映射值: 未找到\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(\"检查 Ambiguity 相关文件:\")\n",
+    "print(f\"配置文件存在: {os.path.exists('config/Ambiguity.json')}\")\n",
+    "print(f\"模块文件存在: {os.path.exists('watermark/ambiguity.py')}\")\n",
+    "\n",
+    "# 检查 WATERMARK_MAPPING_NAMES\n",
+    "from watermark.auto_watermark import WATERMARK_MAPPING_NAMES\n",
+    "print(f\"'Ambiguity' 在映射中: {'Ambiguity' in WATERMARK_MAPPING_NAMES}\")\n",
+    "print(f\"映射值: {WATERMARK_MAPPING_NAMES.get('Ambiguity', '未找到')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid algorithm name: Ambiguity",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAmbiguity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[16], line 33\u001b[0m, in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm_name)\u001b[0m\n\u001b[1;32m     23\u001b[0m transformers_config \u001b[38;5;241m=\u001b[39m TransformersConfig(model\u001b[38;5;241m=\u001b[39mAutoModelForCausalLM\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path)\u001b[38;5;241m.\u001b[39mto(device),\n\u001b[1;32m     24\u001b[0m                                         tokenizer\u001b[38;5;241m=\u001b[39mAutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path),\n\u001b[1;32m     25\u001b[0m                                         vocab_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50272\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m                                         do_sample\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     30\u001b[0m                                         no_repeat_ngram_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Load watermark algorithm\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m myWatermark \u001b[38;5;241m=\u001b[39m \u001b[43mAutoWatermark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malgorithm_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconfig/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransformers_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtransformers_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Generate text\u001b[39;00m\n\u001b[1;32m     36\u001b[0m watermarked_text \u001b[38;5;241m=\u001b[39m myWatermark\u001b[38;5;241m.\u001b[39mgenerate_watermarked_text(prompt)\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_watermark.py:72\u001b[0m, in \u001b[0;36mAutoWatermark.load\u001b[0;34m(algorithm_name, algorithm_config, transformers_config, *args, **kwargs)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload\u001b[39m(algorithm_name, algorithm_config\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, transformers_config\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     71\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Load the watermark algorithm instance based on the algorithm name.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 72\u001b[0m     watermark_name \u001b[38;5;241m=\u001b[39m \u001b[43mwatermark_name_from_alg_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43malgorithm_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     73\u001b[0m     module_name, class_name \u001b[38;5;241m=\u001b[39m watermark_name\u001b[38;5;241m.\u001b[39mrsplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     74\u001b[0m     module \u001b[38;5;241m=\u001b[39m importlib\u001b[38;5;241m.\u001b[39mimport_module(module_name)\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_watermark.py:54\u001b[0m, in \u001b[0;36mwatermark_name_from_alg_name\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m WATERMARK_MAPPING_NAMES[name]\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid algorithm name: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: Invalid algorithm name: Ambiguity"
+     ]
+    }
+   ],
+   "source": [
+    "test_algorithm('Ambiguity')"
    ]
   },
   {
