--- a/MarkLLM_demo.ipynb
+++ b/MarkLLM_demo.ipynb
@@ -55,55 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🚀 开始执行模型下载任务...\n",
-      "\n",
-      "[步骤 2/3] 开始克隆模型仓库...\n",
-      "\n",
-      "--- 正在处理模型: openai-community-gpt2-large ---\n",
-      "创建父目录: /home/aistudio/models\n",
-      "执行命令: git clone --depth 1 https://gitee.com/hf-models/openai-community-gpt2-large /home/aistudio/models/gpt2-large\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into '/home/aistudio/models/gpt2-large'...\n",
-      "Filtering content: 100% (13/13), 24.46 GiB | 37.50 MiB/s, done.\n",
-      "Cloning into '/root/model/sentence-transformers'...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ 模型 'openai-community-gpt2-large' 成功下载到 '/home/aistudio/models/gpt2-large'\n",
-      "\n",
-      "--- 正在处理模型: all-mpnet-base-v2 ---\n",
-      "执行命令: git clone --depth 1 https://gitee.com/hf-models/all-mpnet-base-v2 /root/model/sentence-transformers\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filtering content: 100% (2/2)\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ 模型 'all-mpnet-base-v2' 成功下载到 '/root/model/sentence-transformers'\n",
-      "\n",
-      "[步骤 3/3] 所有下载任务已处理完毕。\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filtering content: 100% (2/2), 835.40 MiB | 7.72 MiB/s, done.\n"
+      "ℹ️ 'download_models' 设置为 False，已跳过所有下载任务。\n"
      ]
     }
    ],
@@ -114,7 +66,7 @@
     "# --- 配置区 ---\n",
     "\n",
     "# 设置为 True 来执行下载，设置为 False 则跳过所有下载\n",
-    "download_models = True\n",
+    "download_models = False\n",
     "\n",
     "# 定义模型下载的目标路径\n",
     "opt_path = \"/root/model/opt-1.3b\"\n",
@@ -205,11 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "id": "bFsJT3LdfynV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/anaconda3/envs/SHIYI/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import json\n",
@@ -498,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -537,8 +498,8 @@
       "检查 Ambiguity 相关文件:\n",
       "配置文件存在: True\n",
       "模块文件存在: False\n",
-      "'Ambiguity' 在映射中: False\n",
-      "映射值: 未找到\n"
+      "'Ambiguity' 在映射中: True\n",
+      "映射值: watermark.ambiguity.Ambiguity\n"
      ]
     }
    ],
@@ -556,21 +517,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Invalid algorithm name: Ambiguity",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded ambiguity.py\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'ambiguity_threshold'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAmbiguity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[16], line 33\u001b[0m, in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm_name)\u001b[0m\n\u001b[1;32m     23\u001b[0m transformers_config \u001b[38;5;241m=\u001b[39m TransformersConfig(model\u001b[38;5;241m=\u001b[39mAutoModelForCausalLM\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path)\u001b[38;5;241m.\u001b[39mto(device),\n\u001b[1;32m     24\u001b[0m                                         tokenizer\u001b[38;5;241m=\u001b[39mAutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path),\n\u001b[1;32m     25\u001b[0m                                         vocab_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50272\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m                                         do_sample\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     30\u001b[0m                                         no_repeat_ngram_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Load watermark algorithm\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m myWatermark \u001b[38;5;241m=\u001b[39m \u001b[43mAutoWatermark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malgorithm_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconfig/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransformers_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtransformers_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Generate text\u001b[39;00m\n\u001b[1;32m     36\u001b[0m watermarked_text \u001b[38;5;241m=\u001b[39m myWatermark\u001b[38;5;241m.\u001b[39mgenerate_watermarked_text(prompt)\n",
-      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_watermark.py:72\u001b[0m, in \u001b[0;36mAutoWatermark.load\u001b[0;34m(algorithm_name, algorithm_config, transformers_config, *args, **kwargs)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mload\u001b[39m(algorithm_name, algorithm_config\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, transformers_config\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     71\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Load the watermark algorithm instance based on the algorithm name.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 72\u001b[0m     watermark_name \u001b[38;5;241m=\u001b[39m \u001b[43mwatermark_name_from_alg_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43malgorithm_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     73\u001b[0m     module_name, class_name \u001b[38;5;241m=\u001b[39m watermark_name\u001b[38;5;241m.\u001b[39mrsplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     74\u001b[0m     module \u001b[38;5;241m=\u001b[39m importlib\u001b[38;5;241m.\u001b[39mimport_module(module_name)\n",
-      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_watermark.py:54\u001b[0m, in \u001b[0;36mwatermark_name_from_alg_name\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m WATERMARK_MAPPING_NAMES[name]\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 54\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid algorithm name: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Invalid algorithm name: Ambiguity"
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtest_algorithm\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAmbiguity\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 33\u001b[0m, in \u001b[0;36mtest_algorithm\u001b[0;34m(algorithm_name)\u001b[0m\n\u001b[1;32m     23\u001b[0m transformers_config \u001b[38;5;241m=\u001b[39m TransformersConfig(model\u001b[38;5;241m=\u001b[39mAutoModelForCausalLM\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path)\u001b[38;5;241m.\u001b[39mto(device),\n\u001b[1;32m     24\u001b[0m                                         tokenizer\u001b[38;5;241m=\u001b[39mAutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(opt_path),\n\u001b[1;32m     25\u001b[0m                                         vocab_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50272\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m                                         do_sample\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     30\u001b[0m                                         no_repeat_ngram_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;66;03m# Load watermark algorithm\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m myWatermark \u001b[38;5;241m=\u001b[39m \u001b[43mAutoWatermark\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malgorithm_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mconfig/\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43malgorithm_name\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransformers_config\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtransformers_config\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# Generate text\u001b[39;00m\n\u001b[1;32m     36\u001b[0m watermarked_text \u001b[38;5;241m=\u001b[39m myWatermark\u001b[38;5;241m.\u001b[39mgenerate_watermarked_text(prompt)\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_watermark.py:77\u001b[0m, in \u001b[0;36mAutoWatermark.load\u001b[0;34m(algorithm_name, algorithm_config, transformers_config, *args, **kwargs)\u001b[0m\n\u001b[1;32m     75\u001b[0m module \u001b[38;5;241m=\u001b[39m importlib\u001b[38;5;241m.\u001b[39mimport_module(module_name)\n\u001b[1;32m     76\u001b[0m watermark_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(module, class_name)\n\u001b[0;32m---> 77\u001b[0m watermark_config \u001b[38;5;241m=\u001b[39m \u001b[43mAutoConfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43malgorithm_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransformers_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malgorithm_config_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43malgorithm_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     78\u001b[0m watermark_instance \u001b[38;5;241m=\u001b[39m watermark_class(watermark_config)\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m watermark_instance\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/auto_config.py:93\u001b[0m, in \u001b[0;36mAutoConfig.load\u001b[0;34m(cls, algorithm_name, transformers_config, algorithm_config_path, **kwargs)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m algorithm_config_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     92\u001b[0m     algorithm_config_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconfig/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00malgorithm_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 93\u001b[0m config_instance \u001b[38;5;241m=\u001b[39m \u001b[43mconfig_class\u001b[49m\u001b[43m(\u001b[49m\u001b[43malgorithm_config_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtransformers_config\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m config_instance\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/base.py:55\u001b[0m, in \u001b[0;36mBaseConfig.__init__\u001b[0;34m(self, algorithm_config_path, transformers_config, *args, **kwargs)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransformers_config \u001b[38;5;241m=\u001b[39m transformers_config\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# Initialize algorithm-specific parameters\u001b[39;00m\n\u001b[0;32m---> 55\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitialize_parameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/wyt2/MarkLLM/watermark/ambiguity/ambiguity.py:22\u001b[0m, in \u001b[0;36mAmbiguityConfig.initialize_parameters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmin_new_tokens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin_new_tokens\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# self.alpha = self.config_dict['alpha']   # threshold for measuring the next token entropy - REMOVED\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mambiguity_threshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mambiguity_threshold\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m   \u001b[38;5;66;03m# threshold for measuring prediction ambiguity using MC Dropout\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_k \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtop_k\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_p \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtop_p\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'ambiguity_threshold'"
      ]
     }
    ],
